--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="profile">
             <h1>Tripti Arland</h1>
-            <p class="title">Student</p>
+            <p class="title">Teacher</p>
         </div>
 
         <div class="section">
@@ -29,8 +29,8 @@
         </div>
 
         <div class="section">
-            <h2>Education</h2>
-            <p><strong>Bhavan's B.P. Vidya Mandir</strong></p>
+            <h2> Profession</h2>
+            <p><strong>Teaching at Bhavan's B.P. Vidya Mandir</strong></p>
             <p>Koradi,Nagpur</p>
         </div>
 
